--- a/src/app/Components/login/signup/signup.component.html
+++ b/src/app/Components/login/signup/signup.component.html
@@ -42,6 +42,5 @@ custom validation dynamic validation unit test-->
         </div>
 
         <button type="submit" class="btn btn-primary">Register</button>
+        <button (click)="loadApiData()" class="btn btn-secondary ml-2" type="button">Load API Data</button>
     </form>
-
-</div>
