--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbar name="hema"></app-navbar>
 <router-outlet></router-outlet>
+<!-- custom tag -->
 <app-footer></app-footer>
